2011-05-04  Joseph Pecoraro  <joepeck@webkit.org>

Reviewed by Darin Adler.

        Unable to Paste After Deleting Text from Input due to -webkit-user-select
        https://bugs.webkit.org/show_bug.cgi?id=60219

        * editing/pasteboard/paste-placeholder-input-expected.txt: Added.
        * editing/pasteboard/paste-placeholder-input.html: Added.

2011-05-04  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Darin Adler.

        Unable to Paste After Deleting Text from Input due to -webkit-user-select
        https://bugs.webkit.org/show_bug.cgi?id=60219

        When deleting all the text inside the input a placeholder <br>
        element was inserted for the selection point. However, when
        pasting, the test run computes the -webkit-user-select for the
        <br> element, instead of what would be the text inside the
        <input> and incorrectly disallows selection and prevented
        the paste.

        Test: editing/pasteboard/paste-placeholder-input.html

        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplacementFragment::insertFragmentForTestRendering): skip
        <br> elements above us as those are likely placeholder elements.

Canonical link: https://commits.webkit.org/75502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85818 268f45cc-cd09-0410-ab3c-d52691b4dbfc